fix alignment of comm info on submission page

--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -1030,6 +1030,7 @@ Entry Mapping Page
   color:#2A94F4;
   font-weight: bold;
   font-size: 1rem;
+  white-space: normal;
 }
 
 .map-survey-response {
